# urdf_test

./: CMakeLists.txt  package.xml
config/: joint_names_어셈블리1 - 복사본.yaml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  link_behind.STL
urdf/: 어셈블리1 - 복사본.csv  어셈블리1 - 복사본.urdf
